Update 'ESSearch' components behaviours
DataSearch component:
- Remove 'CategorySearch' and 'SingleRange' imports.
- Add 'hightlight' feauture on 'DataSearch' component.
- Update DataSearch's 'queryFormat' prop with 'and' value.
- Update DataSearch's 'compomentId' prop from 'searchbox' to 'Ricerca'
value.

SelectedFilters compoment:
- Add 'SelectedFilters' component on the top of 'ResultList' component.

DynamicRangeSlider component:
- Replace 'DynamicRangeSlider' with 'RangeSlider'.
- Set 'RangeSlider' range using fixed 0, 32000 values.
- Add 'customQuery' feauture on 'RangeSlider' in order to query even
null values in 'importo' field.
- Update DataSearch's 'compomentId' prop from 'importofilter' to
'Importo' value.

MultiList components:
- Update 1st MultiList's 'compomentId' prop from 'regionefilter' to
'Regione' value.
- Update 2nd MultiList's 'compomentId' prop from 'provinciafilter' to
'Provincia' value.
- Update 3rd MultiList's'compomentId' prop from 'comunefilter' to
'Comune' value.

Other commit's updates:
- Fix wrong 'title' tag value in `./public/index.html`.
- Comment out 'serviceWorker' code in './index.js'.
- Comment out 'import ./index.css' line in './index.js'.
- Restyle './src/ESSearch.js' code.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    
+
     <script type="text/javascript">
       WebFontConfig = {
         google: {
@@ -36,7 +36,7 @@
       })();
     </script>
 
-    <title>Reactvive Search App</title>
+    <title>ReactiveSearch App</title>
   </head>
   <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
     <noscript>
